# 1brc

./: Cargo.toml
.cargo/: config.toml
src/: generate.rs  main.rs
